1) CHECK for naming conventions of all keys and values present
2) note the type of error while rectifying it
3) proper organizatin of files and folders

///

1) find better way to load the liked Events instead of checking with cloud everytime




Log of Changes:
1) for now every organizer has only one club (use a list) and their events are added in organizedEvents
2) every club has only one approver for now (use a list) 0th index is approver list in club
3) every club has only one captain (use a list) 1st index is captain list in club
4) every club has multiple members (use a list) from 2nd index onwards are members list in club

5) for captain and memeber roles changed...approvers in club is changed
some aspects: 
    1) role variable:
        3 ==> participant
        2 ==> Organiser
        1 ==> Captain/Members
        0 ==> approver
    2) Approval status variable:
        0 ==> pending
        1 ==> approved
        2 ==> rejected
        3 ==> Ended


Future update:
    1) Role Request Acceptance and Rejection by participants
    2) leaderBoards
    3) Multiple clubs for approver and captains and memebers

    
